[gd_scene load_steps=5 format=2]

[ext_resource path="res://General/Font/FontMenu.res" type="BitmapFont" id=1]
[ext_resource path="res://Assets/SF1/ShiningForceTextBackground.png" type="Texture" id=2]
[ext_resource path="res://General/BattleActionsMenu/MagicMenu/MagicMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/SFCD/Items/EmptyItemSlot.png" type="Texture" id=5]

[node name="BattleMagicMenuRoot" type="Node2D"]
script = ExtResource( 3 )

[node name="SpellSlotUpSprite" type="Sprite" parent="."]
position = Vector2( 24, 12 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpellSlotLeftSprite" type="Sprite" parent="."]
position = Vector2( 8, 24 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpellSlotRightSprite" type="Sprite" parent="."]
position = Vector2( 40, 24 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpellSlotDownSprite" type="Sprite" parent="."]
position = Vector2( 24, 36 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 58.0
margin_top = 8.0
margin_right = 160.0
margin_bottom = 48.0
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SpellNameLabel" type="Label" parent="NinePatchRect"]
anchor_left = -0.00218987
anchor_right = 0.99781
anchor_bottom = 1.0
margin_left = 4.22337
margin_top = 5.0
margin_right = -3.77662
margin_bottom = -27.0
custom_fonts/font = ExtResource( 1 )
text = "Name"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SpellLevelWrapper" type="Node2D" parent="NinePatchRect"]
position = Vector2( 3.67892, 16.977 )

[node name="ColorRect" type="ColorRect" parent="NinePatchRect/SpellLevelWrapper"]
margin_right = 1.0
margin_bottom = 7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="NinePatchRect/SpellLevelWrapper"]
margin_left = 1.0
margin_right = 12.0
margin_bottom = 7.0
color = Color( 0.898039, 0.8, 0.0156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="NinePatchRect/SpellLevelWrapper"]
margin_left = 1.0
margin_top = 7.0
margin_right = 12.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="NinePatchRect/SpellLevelWrapper"]
margin_left = 1.0
margin_top = -1.0
margin_right = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="NinePatchRect/SpellLevelWrapper"]
margin_left = 11.9446
margin_top = 0.0525551
margin_right = 12.9446
margin_bottom = 7.05256
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MpStaticLabel" type="Label" parent="NinePatchRect"]
anchor_left = -0.00218987
anchor_right = 0.99781
anchor_bottom = 1.0
margin_left = 4.22337
margin_top = 28.0
margin_right = -81.7766
margin_bottom = -4.0
custom_fonts/font = ExtResource( 1 )
text = "MP"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MpCostLabel" type="Label" parent="NinePatchRect"]
anchor_left = -0.00218987
anchor_right = 0.99781
anchor_bottom = 1.0
margin_left = 22.2234
margin_top = 28.0
margin_right = -3.77662
margin_bottom = -4.0
custom_fonts/font = ExtResource( 1 )
text = "Cost"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
